Story 1: Fix gulpfile.js add condition

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -22,7 +22,7 @@ html
 
 body
 	line-height 1.5
-	font-family: 'OpenSansLight'
+	font-family default-text
 
 article, aside, figcaption, figure, 
 footer, header, hgroup, main, nav, section 
@@ -33,7 +33,7 @@ ol,li
 
 h1, h2, h3, h4, h5, h6
 	margin 0
-	font-family default-font
+	font-family default-text
 
 a
 	text-decoration none
