--- a/app/stylus/var.styl
+++ b/app/stylus/var.styl
@@ -1,3 +1,15 @@
-default-text = "OpenSansRegular"
+default-text =  'OpenSansSemiBold'
 
-default-color =#000000
+font1 = 'HundaiSansHeadBold'
+font2 = 'VagWorldBold'
+font3 = 'OpenSansRegular'
+font4 = 'OpenSansLight'
+font5 = 'OpenSansExtraBold'
+font6 = 'OpenSansItalic'
+font7 = 'OpenSansBold'
+
+def-color =#fff
+def-black = #000000
+def-gray = #999999
+
+
