--- a/app/stylus/var.styl
+++ b/app/stylus/var.styl
@@ -1,15 +1,3 @@
-default-text =  'OpenSansSemiBold'
+default-text = "OpenSansRegular"
 
-font1 = 'HundaiSansHeadBold'
-font2 = 'VagWorldBold'
-font3 = 'OpenSansRegular'
-font4 = 'OpenSansLight'
-font5 = 'OpenSansExtraBold'
-font6 = 'OpenSansItalic'
-font7 = 'OpenSansBold'
-
-def-color =#fff
-def-black = #000000
-def-gray = #999999
-
-
+default-color =#000000
