--- a/app/stylus/fonts.styl
+++ b/app/stylus/fonts.styl
@@ -1,11 +1,7 @@
-@import './mixins/all-mixins'
+@import './mixins/mixin_fonts'
 
 webfont('OpenSansLight', 'OpenSans/OpenSansLight/OpenSansLight')
 webfont('OpenSansRegular', 'OpenSans/OpenSansRegular/OpenSansRegular')
-webfont('OpenSansItalic', 'OpenSans/OpenSansItalic/OpenSansItalic')
-webfont('OpenSansBold', 'OpenSans/OpenSansBold/OpenSansBold')
 webfont('OpenSansSemiBold', 'OpenSans/OpenSansSemiBold/OpenSansSemiBold')
-webfont('OpenSansExtraBold', 'OpenSans/OpenSansExtraBold/OpenSansExtraBold')
 
-webfont('HundaiSansHeadBold', 'HyundaiSansBold/HyundaiSansBold')
-webfont('VagWorldBold', 'VagWorldBold/VAGWorldBold')
+
